--- a/papers/pfds2020/06trees.tex
+++ b/papers/pfds2020/06trees.tex
@@ -203,10 +203,11 @@
 %\end{frame}
 
 
-\begin{frame}[fragile]{}
+\begin{frame}
 \begin{figure}[h]
   \centering
-  \input{figures/rbtree1234.tex}
+%  \input{figures/rbtree1234.tex}
+  \includegraphics{tikzpics/rbtree1234.pdf}
 \end{figure}
 \end{frame}
 
@@ -287,7 +288,7 @@
 \begin{itemize}
 \item $63=11111_2\mapsto$ Bauer 
 \item $31=01111_2\mapsto$ Baum 
-\item $2=10_2\mapsto$ Hof 
+\item $02=00010_2\mapsto$ Hof 
 \item $71=100111_2\mapsto$ Huhn
 \item $39=010111_2\mapsto$ Hund
 \end{itemize}
