--- a/papers/pfds2020/heading.tex
+++ b/papers/pfds2020/heading.tex
@@ -73,7 +73,9 @@
 
 \usepackage{stmaryrd}
 \newcommand{\sem}[1]{\ensuremath{\llbracket #1\rrbracket}}
-
+\newcommand\Haskell{\textsc{Haskell}}
+\newcommand\haskell{\Haskell}
+\newcommand\OCaml{\textsc{OCaml}}
 
 \usepackage{listings}
 %\lstdefinestyle{style1}{
