--- a/papers/pfds2020/pfds_talk.tex
+++ b/papers/pfds2020/pfds_talk.tex
@@ -146,7 +146,7 @@
 \section{Кучи}
 \input{08heaps}
 
-\section{Унификация}
+%\section{Унификация}
 %\input{03unif}
 
 \section{Упражнения}
@@ -162,7 +162,7 @@
 \end{frame}
 
 
-\begin{frame}[allowframebreaks]
+\begin{frame}%[allowframebreaks]
 \frametitle<presentation>{Ссылки}
 \begin{thebibliography}{10}
 \bibitem{paper}
@@ -173,7 +173,7 @@
   \href{http://typeocaml.com/2015/03/12/heap-leftist-tree/}{Heap - Leftist Tree}
   
 \bibitem{aa}
-  \href{https://doi.org/10.1145/2857274.2884038}{<<Immutability changes everything>>}
+  \href{https://doi.org/10.1145/2857274.2884038}{Immutability changes everything}
   \newblock {\em Pat Helland  }
   
 \bibitem{youtube}
