--- a/papers/pfds2020/pfds_talk.tex
+++ b/papers/pfds2020/pfds_talk.tex
@@ -154,11 +154,19 @@
 
 
 \begin{frame}
+\begin{figure}[ht]
+\begin{subfigure}{.4\textwidth}
+  \includegraphics[scale=0.5]{okasaki_cover.jpg}
+\end{subfigure}
+\begin{subfigure}{.55\textwidth}
 \begin{center}
-  {\Huge Конец.}\\
-  
-  Подробнее в книге К.Окасаки "Чисто функциональные структуры данных".
+  Подробнее в книге К.Окасаки \\"Чисто функциональные структуры данных" \\
+  \vspace{6em}
+    
+  {\Huge Конец}
 \end{center}
+\end{subfigure}
+\end{figure}
 \end{frame}
 
 
@@ -170,7 +178,7 @@
  \newblock {\em Chris Okasaki}
 
 \bibitem{leftist-ocaml}
-  \href{http://typeocaml.com/2015/03/12/heap-leftist-tree/}{Heap - Leftist Tree}
+  \href{http://typeocaml.com/2015/03/12/heap-leftist-tree/}{Heap -- Leftist Tree}
   
 \bibitem{aa}
   \href{https://doi.org/10.1145/2857274.2884038}{Immutability changes everything}
