--- a/papers/pfds2020/07exercises.tex
+++ b/papers/pfds2020/07exercises.tex
@@ -7,25 +7,25 @@
 
 Предлагается реализовать устойчивую структуру данных на вашем любимом языке обывательском (C\#, C, etc), и на каком-нибудь функциональном языке (\OCaml{}, \Haskell{}, F\#, Scala 3), а затем сравнить размер/сложность двух реализаций.
 
-Ожидаются реализации в виде чистых функций (ну может понадобится присваивание для эмуляции мемоизации, в остальном -- едва ли)
+Ожидаются реализации в виде чистых функций (ну может понадобится присваивание для эмуляции мемоизации, в остальном его использовать нельзя)
 \vspace{2em}
 
-Обозначение \exscore{A}{B}{C} говорит, что за решение на \sout{обывательском}вашем любимом языке будет начислено A баллов, на классическом функциональном B; С баллов начисляется дополнительно, если обучающийся может сравнить реализации, указать на преимущества и недостатки одной и второй, и т.д.
+%Обозначение \exscore{A}{B}{C} говорит, что за решение на \sout{обывательском}вашем любимом языке будет начислено A баллов, на классическом функциональном B; С баллов начисляется дополнительно, если обучающийся может сравнить реализации, указать на преимущества и недостатки одной и второй, и т.д. Итого за задачу можно будет получить максимум A+B+C баллов
 \end{frame}
 
 
 
-\begin{frame}[allowframebreaks]{Упражнения на ленивость}
-\begin{exercise}[1 балл]
+\begin{frame}[allowframebreaks]{Упражнения на ленивость (максимум 8 баллов)}
+\begin{exercise}[2 балла]
 По аналогии с вычислением последовательности фибоначчи, сделайте вычисление простых чисел решетом Эратосфена
 \end{exercise}
 
-\begin{exercise}[1 балл]
-Дан поток потоков чисел $xss$. Функция \mlinline{merge} должно объединить это всё в один поток чисел. \\
-Ограничение: $\forall (i<\infty) \forall (j<\infty)\quad \big((xss[i][j]\equiv n)\quad \Longrightarrow \quad\exists (k<\infty)\quad (merge(xss)[k]\equiv n)\big)$
+\begin{exercise}[2 балла]
+Дан поток потоков чисел $xss$. Функция \mlinline{merge} должна объединить $xss$ в один поток чисел. \\
+Ограничение: $\forall (i<\infty) \forall (j<\infty)\quad \big((xss[i][j]= n)\quad \Longrightarrow \quad\exists (k<\infty)\quad (merge(xss)[k]= n)\big)$
 \end{exercise}
 
-\begin{exercise}[2 балла]
+\begin{exercise}[4 балла]
 Дано дерево с числами только в листьях. Построить новое дерево, где все числа предыдущего дерева заменены на минимум от этих чисел. Ограничение: за один проход.
 \begin{remark}
 Крайне рекомендуется использовать язык, где все вычисления ленивы по умолчанию (например, \Haskell)
@@ -35,18 +35,19 @@
 
 
 
-\begin{frame}{Упражнения на очереди}
-\begin{exercise}[\exscore{2}{2}{1}]
-Реализуйте чисто функциональную очередь
-\end{exercise}
-
-\begin{exercise}[\exscore{2}{2}{1}]
-Реализуйте очередь банкира
-\end{exercise}
-
-\begin{exercise}[\exscore{2}{2}{1}]
-Реализуйте очередь реального времени
-\end{exercise}
+\begin{frame}{Упражнения на очереди (14 баллов максимум)}
+Реализуйте:
+\begin{itemize}
+\item чисто функциональную очередь 
+\item очередь банкира 
+\item очередь реального времени 
+\end{itemize}
+Награды:
+\begin{itemize}
+\item (4=2+1+1) балла за условный \textsc{Python}
+\item (7=3+2+2) баллов за условный \OCaml{}
+\item Сравнить всех со всеми: очереди между собой и реализации на разных языках (+3)
+\end{itemize}
 \end{frame}
 
 
@@ -66,40 +67,45 @@
 %\end{frame}
 
 
-
-\begin{frame}{Упражнения на кучи}
-\begin{exercise}[\exscore{2}{2}{1}]
-Реализуйте левоориентированную кучу
+\begin{frame}{Упражнения на деревья (максимум 15)}
+\begin{exercise}
+Реализуйте красно-черное дерево, где балансировка делает меньше проверок (упражнение в книге 3.10) \\
+\begin{itemize}
+\item 2 балла за условный \textsc{Python}
+\item 3 балла за условный \OCaml{}
+\item 1 за сравнение всех со всеми
+\end{itemize}
 \end{exercise}
-
-\begin{exercise}[\exscore{2}{2}{1}]
-Реализуйте weight-biased левоориентированную кучу (упражнение в книге 3.4)
+\begin{exercise}
+\begin{itemize}
+\item Реализуйте префиксное дерево и HAMT
+\item 3 балла за условный \textsc{Python}
+\item 4 балла за условный \OCaml{}
+\item 2 за сравнение всех со всеми
+\end{itemize}
 \end{exercise}
+\end{frame}
 
 
-\begin{exercise}[\exscore{3}{3}{1}]
-Реализуйте биномиальную кучу, храня аннотации ранга реже (упражнение в книге 3.6)
-\end{exercise}
 
-\begin{exercise}[\exscore{2}{2}{1}]
-Реализуйте биномиальную кучу с явным минимумом (упражнение в книге 3.7)
-\end{exercise}
+\begin{frame}{Упражнения на кучи (20 баллов максимум)}
+
+Реализуйте:
+\begin{itemize}
+\item левоориентированную кучу
+\item weight-biased левоориентированную кучу (упражнение в книге 3.4)
+\item  биномиальную кучу, храня аннотации ранга реже (упражнение в книге 3.6)
+\item биномиальную кучу с явным минимумом (упражнение в книге 3.7)
+\end{itemize}
+
+Награды
+\begin{itemize}
+\item (6=2+1+2+1) балла за условный \textsc{Python}
+\item (10=3+2+3+2) баллов за условный \OCaml{}
+\item Сравнить всех со всеми: очереди между собой и реализации на разных языках (+4)
+\end{itemize}
+
 
 \end{frame}
 
 
-\begin{frame}{Упражнения на деревья}
-\begin{exercise}[\exscore{1}{2}{1}]
-Реализуйте красно-черное дерево, где балансировка делает меньше проверок (упражнение в книге 3.10)
-\end{exercise}
-
-
-\begin{exercise}[\exscore{2}{2}{1}]
-Реализуйте префиксное дерево
-\end{exercise}
-
-\begin{exercise}[\exscore{3}{3}{1}]
-Реализуйте HAMT
-\end{exercise}
-
-\end{frame}
