--- a/papers/pfds2020/pfds_talk.tex
+++ b/papers/pfds2020/pfds_talk.tex
@@ -152,6 +152,19 @@
 \section{Упражнения}
 \input{07exercises}
 
+\section{Вопросы к экзамену}
+
+\begin{frame}{Вопросы к экзамену}
+\begin{itemize}
+\item Понятия устойчивых (persistent) и неизменяемых (immutable)  структур данных. Преимущества и недостатки.
+\item Чисто функциональная очередь. Оценки амортизированной и асимптотической сложности для основных операций
+\item Очереди банкира и реального времени. Оценки амортизированной и асимптотической сложности для основных операций
+\item Деревья поиска. Балансирующиеся красно-черные деревья. Оценки сложности для основных операций.
+\item Понятия префиксных деревьев и HAMT.
+\item Левоориентированные кучи. Оценки асимптотической сложности для основных операций.
+\item Биномиальные кучи. Оценки асимптотической сложности для основных операций.
+\end{itemize}
+\end{frame}
 
 \begin{frame}
 \begin{figure}[ht]
