Finished slides about miniConf
Signed-off-by: Kakadu <Kakadu@pm.me>

--- a/papers/miniConf2020/heading.tex
+++ b/papers/miniConf2020/heading.tex
@@ -1,5 +1,3 @@
-
-
 % get rid of header navigation bar
 \setbeamertemplate{headline}{}
 % get rid of bottom navigation symbols
@@ -51,6 +49,8 @@
  ItalicFont=cmunsi,
 ]{cmunss}
 \setmonofont{Latin Modern Mono}
+%\setmonofont{Inconsolata}
+
 
 \usefonttheme{professionalfonts}
 
