DSLs: remove about english version
Signed-off-by: Kakadu <Kakadu@pm.me>

--- a/DSLs/index.asciidoc
+++ b/DSLs/index.asciidoc
@@ -10,7 +10,7 @@
 :Author: Dmitrii Kosarev a.k.a. Kakadu
 :email:  Dmitrii.Kosarev@protonmail.ch
 
-image:United-Kingdom-Flag-PNG-Picture.png[width=5%,scalewidth=1cm] The variant of this report for english-speaking users is link:index_eng.html[here].
+// image:United-Kingdom-Flag-PNG-Picture.png[width=5%,scalewidth=1cm] The variant of this report for english-speaking users is link:index_eng.html[here].
 
 Предметно-ориентированные языки (DSL) удобны приразработке программных продуктов тем, что они более удобным образом отражают в своём синтаксисе предметную область, и тем самым облегчают процесс разработки. Предметны-ориентированные языки бывают внешние и встроенные.
 Внешние DSL (например, SQL) являются отдельными языками от основного языка программирования, и поэтому требуют некоторых накладных расходов в инфраструктуре, которая будет позволять использовать несколько языков одновременно. Другим недостатком можно назвать то, что они требуют некоторого обучения перед началом использования, по сути сотрудников необходимо  обучать ещё одному языку программирования. Встроенные DSL являются некоторым специальным синтаксисом (или даже набором интерфейсом) для базового языка, в который они встроены. Для таких языков не нужно поддерживать инфраструктуру для разработки одновременно на нескольких языках программирования, затраты на обучение сотрудников также снижаются, так как те по сути всё время используют один и тот же язык программирования. Недостатком встроенных языков может служить тот факт, что технические особенности базового языка программиования могут ограничивать богатство конструкций, которые представимы во встроенном языке.
